# AndroidSerialPort

./: .gitignore  LICENSE.txt  README.md  VERSION.md  build.gradle  gradle.properties  settings.gradle
demo/: .gitignore  SenseTime_SenseEngine.jks  build.gradle  platform.jks  proguard-project.txt  proguard-rules.pro  project.properties
demo/release/: demo-release.aab  output.json
demo/src/main/: AndroidManifest.xml
demo/src/main/java/com/laotie/serial/: LaoTieApp.java
demo/src/main/java/com/laotie/serial/ui/: SerialActivity.java  SplashActivity.java
demo/src/main/res/drawable/: button_selector.xml  button_style.xml  img_dir_divider.xml
demo/src/main/res/layout/: activity_serial.xml  activity_splash.xml
demo/src/main/res/values/: arrays.xml  attr.xml  colors.xml  strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
libSerial/: .gitignore  build.gradle  proguard-rules.pro
libSerial/src/main/: AndroidManifest.xml
libSerial/src/main/java/com/sensetime/mtc/: IReceiveCallback.java  MClient.java  MtcCallback.java  MtcCode.java  MtcReceiver.java
libSerial/src/main/jni/: CMakeLists.txt  jni.cpp  mtc_log.h
libSerial/src/main/jni/src/: JNIEnvPtr.cpp  JNIEnvPtr.h  Utils.cpp  Utils.h  definition.h  mtc.cpp  mtc.h  mtc.pro  ringbuffer.h  serial.cpp  serial.h  tlv.cpp  tlv.h
libSerial/src/main/res/values/: strings.xml
